--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://PostgreSQL:5432/news_page_REST_db
+spring.datasource.username=postgres
+spring.datasource.password=02029315
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+server.port=8086
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.sql-script-encoding= UTF-8
